# Http-server

./: .gitignore  CMakeLists.txt  HelloWorldHandler.hpp  HttpData.hpp  HttpServer.cpp  HttpServer.hpp  HttpTargetHandler.hpp  README.md  example-main.cpp  main.cpp
Frontend/: index.html  index.js
HttpRouters/: HelloWorldHandler.hpp  UserHandler.hpp
HttpTargetHandlers/: HelloWorldHandler.hpp
Include/: HttpData.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpServer.hpp  HttpTargetHandler.hpp  ParsingHelperFunctions.hpp  UrlMapping.hpp
Include/Parsing/: ParsingHelperFunctions.hpp
Parsing/: CMakeLists.txt  ParsingHelperFunctions.cpp
